# image_sketchifier

./: .gitignore  CMakeLists.txt  README.md
include/: image.h  sketchify.h  utils.h
src/: image.cpp  main.cpp  sketchify.cpp  utils.cpp
